--- a/package.json
+++ b/package.json
@@ -3,29 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "postinstall": "node scripts/patch-plasmic.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "preview": "next build && next start",
-    "deploy": "npm run build"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@plasmicapp/host": "^1.0.226",
-    "@plasmicapp/loader-nextjs": "^1.0.441",
+    "@plasmicapp/loader-nextjs": "^1.0.410",
     "@plasmicapp/react-web": "^0.2.404",
-    "@supabase/ssr": "^0.7.0",
-    "@supabase/supabase-js": "^2.75.0",
-    "next": "14.2.5",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.48.0",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^22.10.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "eslint": "^9.18.0",
+    "eslint-config-next": "^15.1.5",
+    "typescript": "^5.7.3"
   }
 }
