--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@plasmicpkgs/react-aria": "^0.0.154",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.0",
+    "antd": "^5.27.5",
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18"
