--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@mui/x-data-grid-pro": "^8.16.0",
+    "@mui/x-license-pro": "^6.10.2",
     "@plasmicapp/cli": "^0.1.348",
     "@plasmicapp/loader-nextjs": "^1.0.441",
     "@plasmicapp/react-web": "^0.2.404",
