Complete Positional Ratings component redesign
Major changes per user requirements:

1. Brand & Typography:
   - Levelset green (#31664a) used throughout
   - Satoshi font applied to all elements
   - Professional, clean appearance

2. Date Range Selector:
   - Moved to upper right in a row
   - Pill-shaped preset buttons (MTD, QTD, Last 30/90 Days)
   - Functional start/end date pickers with calendar popups
   - Less shadows, cleaner design

3. Row & Column Styling:
   - Thinner rows (36px height) for more data density
   - Removed gaps between criteria columns
   - Column separators hidden for cleaner look

4. Employee Role Column:
   - Uses same pill styling as RosterTable
   - Color-coded by role: New Hire (green), Team Member (blue),
     Trainer (red), Team Lead (yellow), Director (purple), etc.

5. FOH/BOH Filters:
   - Changed from checkboxes to selectable pills
   - Darker when selected (solid color with white text)
   - Lighter when unselected (light background with colored border)
   - FOH = Blue (#3b82f6), BOH = Gold (#f59e0b)

6. Position Column:
   - All positions displayed as pills
   - Styled based on FOH/BOH classification
   - FOH positions = Blue pill, BOH positions = Gold pill
   - Uses cleanPositionName (no FOH/BOH suffix)

7. Technical Fixes:
   - Installed @mui/x-date-pickers and date-fns
   - Added @mui/x-date-pickers to transpilePackages
   - Fixed import paths for DatePicker and AdapterDateFns
   - Removed deprecated GridValueGetterParams import
   - Removed invalid sx props from toolbar buttons

Features:
- Sorting icons on all sortable columns (Date, Employee, Role, Leader, Position, Overall)
- Filter button reveals search bars under headers
- Color-coded criteria cells with Big 5 tooltips
- Delete with confirmation modal
- Pagination: 25, 50, 100, 250 options
- Export to CSV/Excel

Build tested locally - all pages compile successfully.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "@mui/x-data-grid-pro": "^8.16.0",
+    "@mui/x-date-pickers": "^8.16.0",
     "@mui/x-license": "^8.16.0",
     "@plasmicapp/cli": "^0.1.348",
     "@plasmicapp/loader-nextjs": "^1.0.441",
@@ -31,6 +32,7 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.0",
     "antd": "^5.27.5",
+    "date-fns": "^4.1.0",
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18"
