--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@supabase/supabase-js": "^2.48.0",
     "antd": "^5.27.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18"
