FEATURE: PDF Export for Positional Ratings
Implemented complete PDF export functionality with styled reports matching the current UI.

NEW DEPENDENCIES:
- Installed @react-pdf/renderer (52 new packages)

NEW FILE: components/CodeComponents/PositionalRatingsPDF.tsx
- Complete PDF document component using @react-pdf/renderer
- Registered Satoshi fonts (Regular, Medium, Bold)
- Exact color matching (Levelset green, FOH blue, BOH yellow, rating colors)

PDF DOCUMENT STRUCTURE:

1. TITLE SECTION:
   - "Positional Excellence Ratings" (28px, bold, Levelset green)
   - Top of page

2. FILTERS SECTION:
   - Grey background box with all active filters
   - Date Range: Start - End
   - Areas: FOH/BOH (shows which selected)
   - Search text (if present)
   - Column filters with formatted operators (=, ≠, in)

3. METRICS CARDS (3 cards in row):
   - # of Ratings with trend badge and delta
   - Avg. Rating with trend badge and delta
   - Ratings per Day with trend badge and delta
   - Trend badges: Green (↑ X%), Red (↓ X%), or Grey (% --)
   - Delta text color-coded (green/red/grey)
   - Exact styling match with 28px values, 14px names, 12px deltas

4. TABLE:
   - All columns: Date, Employee, Employee Role, Leader, Position, Criteria 1-5, Overall
   - Color-coded rating cells (green ≥2.75, orange ≥1.75, red <1.75)
   - Role pills (grey background)
   - Position pills (FOH blue, BOH yellow)
   - Headers with grey background
   - Landscape orientation to fit all columns
   - Auto-pagination if > 1 page needed
   - wrap={false} on rows to prevent breaking mid-row

5. PAGE FOOTER:
   - Page numbers (Page X of Y)
   - Fixed positioning at bottom

STYLING DETAILS:
- Page: A4 landscape, 30px padding, white background
- Fonts: Satoshi family with 400, 500, 700 weights
- Colors: Exact match to UI (#31664a, #006391, #ffcc5b, #249e6b, etc.)
- Column widths: Date 12%, Employee 14%, Role 11%, Leader 13%, Position 10%, Ratings 6% each
- Pills: 8px font, 8px horizontal padding, 12px border radi

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@plasmicpkgs/plasmic-rich-components": "^1.0.223",
     "@plasmicpkgs/plasmic-tabs": "^0.0.68",
     "@plasmicpkgs/react-aria": "^0.0.154",
+    "@react-pdf/renderer": "^4.3.1",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.0",
     "antd": "^5.27.5",
