feat: Implement certification status system
Database Changes:
- Add SQL migration to convert is_certified (boolean) to certified_status (text enum)
- Create certification_audit table for tracking status changes and history
- Add RLS policies and indexes for security and performance

Backend Implementation:
- lib/certification-utils.ts: PEA Audit Day calculation and helper functions
- lib/fetch-position-averages.ts: Fetch employee ratings from Google Sheets bundles
- lib/evaluate-certifications.ts: Core state machine for certification transitions
- Update pay-calculator.ts to use certified_status with isCertifiedForPay()

Frontend Changes:
- Update RosterTable with certification status dropdown
- Add styled pills for each status (Not Certified, Pending, Certified, PIP)
- Support manual status overrides via dropdown

API Endpoints:
- Update employees API to handle certified_status field
- Create cron job endpoint for automated PEA Audit Day evaluations
- Add vercel.json configuration for weekly cron schedule

Scripts & Documentation:
- scripts/initial-certification-setup.ts: One-time setup for initial statuses
- CERTIFICATION_SYSTEM.md: Comprehensive documentation

Features:
- Automated state transitions based on rolling-4 position averages
- Only applies to Buda and West Buda locations
- Tracks audit history for compliance and debugging
- Manual override capability for special cases
- Integrates with existing pay calculation system

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,8 @@
 {
-  "git": {
-    "deploymentEnabled": {
-      "main": true,
-      "preview": true
+  "crons": [
+    {
+      "path": "/api/cron/evaluate-certifications",
+      "schedule": "0 8 * * 1"
     }
-  },
-  "github": {
-    "autoAlias": false,
-    "silent": false
-  },
-  "buildCommand": "npm run build",
-  "framework": "nextjs"
+  ]
 }
-
