--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "antd": "^5.27.5",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "i18next": "^25.6.2",
     "next": "^14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-i18next": "^16.3.3"
   },
   "devDependencies": {
     "@types/node": "^22.10.7",
