--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@react-pdf/renderer": "^4.3.1",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.0",
+    "@types/xlsx": "^0.0.35",
     "antd": "^5.27.5",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
@@ -39,7 +40,8 @@
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^16.3.3"
+    "react-i18next": "^16.3.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.10.7",
