--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "crons": [
     {
       "path": "/api/cron/evaluate-certifications",
-      "schedule": "0 8 * * 1"
+      "schedule": "0 8 * * *"
     }
   ]
 }
