--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^17.2.3",
     "i18next": "^25.6.2",
     "next": "^14.2.5",
+    "qrcode.react": "^4.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^16.3.3",
