--- a/package.json
+++ b/package.json
@@ -46,10 +46,14 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.7",
+    "@types/pdfkit": "^0.17.4",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.1.5",
+    "pdfkit": "^0.17.2",
+    "qrcode": "^1.5.4",
     "typescript": "^5.7.3"
   }
 }
