--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "@types/qrcode": "^1.5.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/sharp": "^0.31.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.1.5",
     "pdfkit": "^0.17.2",
     "qrcode": "^1.5.4",
+    "sharp": "^0.34.5",
     "typescript": "^5.7.3"
   }
 }
