Add Mintlify documentation setup
- Create /docs folder with Mintlify configuration (almond theme, Levelset branding)
- Add Mont and Satoshi fonts for consistent typography
- Create comprehensive guide pages for all features:
  - Getting Started (introduction, first-login)
  - Positional Excellence (overview, submitting ratings, PEA classic)
  - Discipline (overview, submitting infractions, viewing history)
  - Roster Management (overview, adding employees, managing roles)
  - Organization Settings (overview, positions, rating criteria, roles, users)
- Create internal /api-docs folder with OpenAPI 3.0 spec (not deployed to Mintlify)
- Update vercel.json with rewrites for docs.levelset.io -> levelset.mintlify.dev

--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,17 @@
       "path": "/api/cron/evaluate-certifications",
       "schedule": "0 8 * * *"
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/",
+      "has": [{ "type": "host", "value": "docs.levelset.io" }],
+      "destination": "https://levelset.mintlify.dev/"
+    },
+    {
+      "source": "/:path*",
+      "has": [{ "type": "host", "value": "docs.levelset.io" }],
+      "destination": "https://levelset.mintlify.dev/:path*"
+    }
   ]
 }
