--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@react-pdf/renderer": "^4.3.1",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.0",
+    "@types/react-signature-canvas": "^1.0.7",
     "@types/xlsx": "^0.0.35",
     "antd": "^5.27.5",
     "date-fns": "^4.1.0",
@@ -42,6 +43,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^16.3.3",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
